# sigfox-ep-rf-api-semtech-sx126x

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/: precompile_sx126x_rf_api.cmake  sx126x.patch
inc/board/: sx126x_hw_api.h
inc/manuf/: smtc_dbpsk.h  sx126x_rf_api.h
src/board/: sx126x_hal.c  sx126x_hw_api.c
src/manuf/: smtc_dbpsk.c  sx126x_rf_api.c
